--- a/timer.html
+++ b/timer.html
@@ -59,7 +59,7 @@
 
         .progress-arc {
             fill: none;
-            stroke: #212529;
+            stroke: #ffffff;
             stroke-width: 6;
             stroke-linecap: round;
             transition: stroke-dasharray 0.1s ease;
@@ -102,7 +102,7 @@
         }
 
         .btn {
-            background: #212529;
+            background: #2f2f2f;
             color: white;
             border: none;
             border-radius: 25px;
@@ -119,12 +119,12 @@
         }
 
         .btn-reset {
-            background: #6c757d;
+            background: #2f2f2f;
             min-width: 80px;
         }
 
         .btn-reset:hover {
-            background: #5a6268;
+            background: #495057;
         }
 
         .hidden {
