--- a/timer.html
+++ b/timer.html
@@ -23,6 +23,7 @@
 
         .timer-container {
             background: transparent;
+            display: flex;
             text-align: center;
             max-width: 300px;
             width: 100%;
@@ -39,7 +40,7 @@
             width: 100%;
             height: 100%;
             border-radius: 50%;
-            border: 3px solid #e9ecef;
+            border: 3px solid #2f2f2f;
             position: absolute;
         }
 
@@ -74,7 +75,7 @@
             transform: translate(-50%, -50%);
             font-size: 24px;
             font-weight: 600;
-            color: #212529;
+            color: #ffffff;
             cursor: pointer;
             user-select: none;
         }
@@ -115,7 +116,7 @@
         }
 
         .btn:hover {
-            background: #495057;
+            background: #373737;
         }
 
         .btn-reset {
@@ -124,7 +125,7 @@
         }
 
         .btn-reset:hover {
-            background: #495057;
+            background: #373737;
         }
 
         .hidden {
