--- a/timer.html
+++ b/timer.html
@@ -135,7 +135,7 @@
         .done-text {
             font-size: 18px;
             font-weight: 600;
-            color: #28a745;
+            color: #ffffff;
         }
     </style>
 </head>
