--- a/timer.html
+++ b/timer.html
@@ -40,6 +40,7 @@
             width: 100%;
             height: 100%;
             border-radius: 50%;
+            stroke: #2f2f2f
             border: 3px solid #2f2f2f;
             position: absolute;
         }
