--- a/timer.html
+++ b/timer.html
@@ -86,7 +86,7 @@
             transform: translate(-50%, -50%);
             font-size: 24px;
             font-weight: 600;
-            color: #212529;
+            color: #ffffff;
             background: transparent;
             border: none;
             text-align: center;
