--- a/timer.html
+++ b/timer.html
@@ -65,7 +65,7 @@
 
         .progress-arc {
             fill: none;
-            stroke: text-color;
+            stroke: #5727;
             stroke-width: 6;
             stroke-linecap: round;
             transition: stroke-dasharray 0.1s ease;
@@ -80,7 +80,7 @@
             transform: translate(-50%, -50%);
             font-size: 24px;
             font-weight: 600;
-            color: #ffffff;
+            color: text-color;
             cursor: pointer;
             user-select: none;
         }
