--- a/timer.html
+++ b/timer.html
@@ -53,6 +53,7 @@
             width: 100%;
             height: 100%;
             position: absolute;
+            stroke: #5727;
             top: 0;
             left: 0;
             opacity: 0;
