--- a/timer.html
+++ b/timer.html
@@ -53,7 +53,7 @@
             width: 100%;
             height: 100%;
             position: absolute;
-            stroke: #5727;
+            stroke: text-color;
             top: 0;
             left: 0;
             opacity: 0;
@@ -66,7 +66,7 @@
 
         .progress-arc {
             fill: none;
-            stroke: #5727;
+            stroke: text-color;
             stroke-width: 6;
             stroke-linecap: round;
             transition: stroke-dasharray 0.1s ease;
