--- a/timer.html
+++ b/timer.html
@@ -53,7 +53,7 @@
             width: 100%;
             height: 100%;
             position: absolute;
-            stroke: text-color;
+            stroke: #FFFFFF;
             top: 0;
             left: 0;
             opacity: 0;
@@ -66,7 +66,7 @@
 
         .progress-arc {
             fill: none;
-            stroke: text-color;
+            stroke: #FFFFFF;
             stroke-width: 6;
             stroke-linecap: round;
             transition: stroke-dasharray 0.1s ease;
@@ -81,7 +81,7 @@
             transform: translate(-50%, -50%);
             font-size: 24px;
             font-weight: 600;
-            color: text-color;
+            color: #FFFFFF;
             cursor: pointer;
             user-select: none;
         }
@@ -93,7 +93,7 @@
             transform: translate(-50%, -50%);
             font-size: 24px;
             font-weight: 600;
-            color: text-color;
+            color: #FFFFFF;
             background: transparent;
             border: none;
             text-align: center;
